--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,7 +1,8 @@
 /* DashboardComponent's private CSS styles */
 [class*='col-'] {
-    float: left;
-    padding-right: 20px;
+    float: center;
+    padding-left: 5px;
+    padding-right: 5px;
     padding-bottom: 20px;
   }
   [class*='col-']:last-of-type {
@@ -14,12 +15,6 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-  }
-  h3 {
-    text-align: center; margin-bottom: 0;
-  }
-  h4 {
-    position: relative;
   }
   .grid {
     margin: 0;
@@ -68,4 +63,16 @@
 
   .example-card{
     width: 320px;
+  }
+
+  p{
+    height: 100px;
+  }
+
+  .container{
+    padding: 10px 40px 10px 40px;
+  }
+
+  .example-header-image {
+    background-size: cover;
   }
