--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="hero">
+<div *ngIf="hero" class="container" >
+<mat-card>
 
   <h2>{{hero.name | uppercase }} Details</h2>
   <div>
@@ -8,17 +9,23 @@
     <mat-form-field>
       <input [(ngModel)]="hero.name" matInput placeholder="name"/>
     </mat-form-field>
+
     <mat-form-field>
       <input [(ngModel)]="hero.subtitle"  matInput placeholder="subtitle"/>
     </mat-form-field>
-    <label>content:
-      <input [(ngModel)]="hero.content" placeholder="content"/>
-    </label>
-    <label>image URL:
-        <input [(ngModel)]="hero.URL" placeholder="URL"/>
-      </label>
+
+    <mat-form-field>
+      <textarea [(ngModel)]="hero.content" matInput placeholder="content"></textarea>
+    </mat-form-field>
+
+    <mat-form-field>
+        <input #img [(ngModel)]="hero.URL" matInput placeholder="URL"/>
+  </mat-form-field>
+
+  <label for="file">File:</label>
+    <input type="file" (change)="upload($event)" accept=".png,.jpg" />
   </div>
-  <button (click)="goBack()">go back</button>
+  <button mat-button color="accent" (click)="goBack()">Go Back</button>
+
+</mat-card>
 </div>
-
-
