--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,20 @@
-
-<div *ngIf="auth.user | async; then authenticated else guest">
+<div class="container" fxLayout="column" fxLayoutAlign="center center">
+<div *ngIf="auth.user | async; then authenticated else guest" >
 
   </div>
   
   <ng-template #guest>
-    <h3>Howdy, GUEST</h3>
-    <button (click)="auth.googleLogin()"></button>
-      <i class="fa fa-google"></i> Connect Google
+    <mat-card>
+      <h3>Google Login</h3>
+      <button mat-raised-button color="warn" (click)="auth.googleLogin()">Connect Google</button>
+    </mat-card>
   </ng-template>
   
   
   <ng-template #authenticated>
     <div *ngIf="auth.user | async as user">
-      <h3>Howdy, {{user.name}}</h3>
-      <p>UID: {{user.uid}}</p>
-      
+      <h1>Hello, {{user.name}}</h1>
+      <button mat-raised-button color="warn" routerLink="/mypage" >Move to MyPage</button>
     </div>
   </ng-template>
+</div>
