--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,9 @@ button:disabled {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
+body{
+  margin: 0px 0px 0px 0px;
+}
 /*
 Copyright 2017-2018 Google Inc. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
