--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         </ng-template>
         <ng-template #authed>
                 <div fxLayout="row" fxLayoutAlign="end center">
-                        <a routerLink="/dashboard" mat-button (click)=auth.logout()>Logout</a>
+                        <a mat-button (click)=auth.logout()>Logout</a>
                         <a routerLink="/heroes" mat-button>Heroes</a>
                         <a routerLink="/dashboard" mat-button>Dashboard</a>
                         <a routerLink="/mypage" mat-button>MyPage</a>
