--- a/src/app/hero-table/hero-table.component.html
+++ b/src/app/hero-table/hero-table.component.html
@@ -1,44 +1,25 @@
-<br>
-<br>
-<br>
-
 <div class="example-container mat-elevation-z8">
-    <table mat-table >
-      <thead>
-        <tr mat-header-row>
-            <th mat-header-cell > No.1 </th>
-            <th mat-header-cell > No.2 </th>
-            <th mat-header-cell > No.3 </th>
-        </tr>
-      </thead>
-      <tbody>
-          <tr mat-header-row>
-              <td mat-cell>1</td>
-              <td mat-cell>2</td>
-              <td mat-cell>3</td>
-          </tr>
-          <tr mat-header-row>
-              <td mat-cell>1</td>
-              <td mat-cell>2</td>
-              <td mat-cell>3</td>
-          </tr>
-          <tr mat-header-row>
-              <td mat-cell>1</td>
-              <td mat-cell>2</td>
-              <td mat-cell>3</td>
-          </tr>
-          <tr mat-header-row>
-              <td mat-cell>1</td>
-              <td mat-cell>2</td>
-              <td mat-cell>3</td>
-          </tr>
-      </tbody>
+    <mat-table #table [dataSource]="dataSource">
+  
+      <ng-container matColumnDef="hid">
+        <mat-header-cell *matHeaderCellDef> Hero ID </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.hid}} </mat-cell>
+      </ng-container>
+  
+
+      <ng-container matColumnDef="heroName">
+        <mat-header-cell *matHeaderCellDef> Hero Name </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.heroName}} </mat-cell>
+      </ng-container>
+  
+ 
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.date | date: 'short'}} </mat-cell>
+      </ng-container>
+  
      
-      
-    </table>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
   </div>
-  
-  
-  <!-- Copyright 2018 Google Inc. All Rights Reserved.
-      Use of this source code is governed by an MIT-style license that
-      can be found in the LICENSE file at http://angular.io/license -->
