--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -1,5 +1,29 @@
 .container{
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
+
+
+.filebox label { 
+    display: inline-block;
+    padding: .5em .75em;
+    color: #999;
+    font-size: inherit;
+    line-height: normal; 
+    vertical-align: middle; background-color: #fdfdfd; 
+    cursor: pointer; border: 1px solid #ebebeb; 
+    border-bottom-color: #e2e2e2; 
+    border-radius: .25em; 
+  } 
+  
+  .filebox input[type="file"] { 
+   position: absolute; 
+   width: 1px; 
+   height: 1px; 
+   padding: 0;
+   margin: -1px; 
+   overflow: hidden;
+  clip:rect(0,0,0,0); 
+    border: 0; 
+    }
