--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,12 @@
 
   .container{
-    padding: 10px 40px 10px 40px;
+    padding: 10px 230px 10px 230px;
+  }
+
+  .login{
+    height: 300px;
+  }
+
+  h1{
+    color: orangered;
   }
