--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,23 @@
-<div class="container" fxLayout="column" fxLayoutAlign="center center">
-<div *ngIf="auth.user | async; then authenticated else guest" >
+<div class="container" fxLayout="column" fxLayoutAlign="center stretch">
+  <br><br><br>
+<div *ngIf="auth.user | async; then authenticated else guest"  >
 
   </div>
   
   <ng-template #guest>
-    <mat-card>
-      <h3>Google Login</h3>
-      <button mat-raised-button color="warn" (click)="auth.googleLogin()">Connect Google</button>
+    <mat-card  class="login" fxLayout="column" fxLayoutAlign="center center">
+      <h1>Google Login</h1>
+      <button mat-raised-button color="warn" (click)="auth.googleLogin()">Login With Google</button>
     </mat-card>
   </ng-template>
   
   
   <ng-template #authenticated>
-    <div *ngIf="auth.user | async as user">
+      <mat-card class="login" fxLayout="column" fxLayoutAlign="center center">
+    <div *ngIf="auth.user | async as user" fxLayout="column" fxLayoutAlign="center stretch">
       <h1>Hello, {{user.name}}</h1>
       <button mat-raised-button color="warn" routerLink="/mypage" >Move to MyPage</button>
     </div>
+    </mat-card>
   </ng-template>
 </div>
