--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -106,3 +106,27 @@
     border: 0; 
     }
 
+  .example-section {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 30px;
+  }
+
+  
+.example-margin {
+  margin: 10px;
+}
+.example-h2 {
+  margin: 10px;
+}
+
+
+.mat-slider-horizontal {
+  width: 300px;
+}
+
+.option-card{
+  width : 600px;
+  
+}
