--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,68 @@
+
+
+
+<!--check boxes-->
+<mat-card class="option-card">
+    <mat-card-content>
+  <section class="example-section">
+      <mat-checkbox class="example-margin" [(ngModel)]="meal"> 식 사 </mat-checkbox>
+      <div *ngIf="meal">
+        <mat-checkbox>한식</mat-checkbox>
+        <mat-checkbox>중식</mat-checkbox>
+        <mat-checkbox>양식</mat-checkbox>
+        <mat-checkbox>일식</mat-checkbox>
+        <mat-checkbox>분식</mat-checkbox>
+      </div>
+      <br>
+    </section>
+    <section class="example-section">
+      <mat-checkbox class="example-margin" [(ngModel)]="dessert">디저트</mat-checkbox>
+      <div *ngIf="dessert">
+        <mat-checkbox>음료</mat-checkbox>
+        <mat-checkbox>아이스크림</mat-checkbox>
+        <mat-checkbox>케이크</mat-checkbox>
+        <mat-checkbox>분식</mat-checkbox>
+        <mat-checkbox>빵</mat-checkbox>
+      </div>
+    </section>
+    <section class="example-section">
+        <mat-checkbox class="example-margin" [(ngModel)]="people">인원수</mat-checkbox>
+        <div *ngIf="people">
+          <mat-checkbox>1인</mat-checkbox>
+          <mat-checkbox>2인</mat-checkbox>
+          <mat-checkbox>3인</mat-checkbox>
+          <mat-checkbox>4인 이상</mat-checkbox>
+        </div>
+      </section>
+    <section>
+        <mat-slider
+        [(ngModel)]="value"
+        max=100000
+        min=1000
+        step=500
+        
+        >
+      </mat-slider>
+    <mat-form-field class="example-margin">
+        <input matInput type="number" placeholder="직접 입력" [(ngModel)]="value">
+      </mat-form-field>
+    
+</section>
+      
+  </mat-card-content>
+</mat-card>
+       
+
+    
+  
+ 
+    
+
+
+
+
+<!--원래 히어로 코드
 <div class="container" fxLayout="column">
-  <h1>Heroes</h1>
-  <br>
   <mat-tab-group>
       <mat-tab label="Heroes">
           <div class="grid grid-pad card-container" >
@@ -63,4 +125,6 @@
   </mat-tab-group>
 
 </div>
+
+-->
 
