modified : mypage selecter

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -45,10 +45,10 @@
       </mat-slider>
     <mat-form-field class="example-margin">
         <input matInput type="number" placeholder="직접 입력" [(ngModel)]="value">
-      </mat-form-field>
+    </mat-form-field>
     
 </section>
-      
+<button mat-raised-button color="primary">Enter</button>
   </mat-card-content>
 </mat-card>
        
